:bear: Beter! :sunglasses: fixed overlapping effect
[158556140](https://www.pivotaltracker.com/story/show/158556140) As a Freelancer, I want to make the animations of the background images slower and subtler for people that stay on the page so that I may impress them.

--- a/less/aventine-background-slideshow.less
+++ b/less/aventine-background-slideshow.less
@@ -197,8 +197,8 @@
 @-webkit-keyframes imageAnimation {
   0% {
     opacity: 0;
-    -webkit-transform: translate(-1024px, 0);
-    -webkit-animation-timing-function: ease-out;
+    -webkit-transform: translateX(-1024px);
+    -webkit-animation-timing-function: ease-in;
   }
 
   17% {
@@ -207,51 +207,55 @@
     -webkit-animation-timing-function: ease-out;
   }
 
+  25% {
+    opacity: 0;
+    -webkit-transform: scale(1.5);
+  }
+
   100% {
     opacity: 0;
-    -webkit-animation-timing-function: ease-out;
   }
 }
 
 @-moz-keyframes imageAnimation {
   0% {
     opacity: 0;
-    -moz-transform: translate(-1024px, 0);
-    -moz-animation-timing-function: ease-out;
+    -moz-transform: translateX(-1024px);
+    -moz-animation-timing-function: ease-in;
   }
 
-  17% {
+  8% {
     opacity: 1;
     -moz-transform: scale(1.5);
     -moz-animation-timing-function: ease-out;
   }
 
+  17% {
+    opacity: 0;
+    -moz-transform: scale(1.5);
+  }
+
   100% {
     opacity: 0;
-    -moz-animation-timing-function: ease-out;
   }
 }
 
 @-o-keyframes imageAnimation {
   0% {
     opacity: 0;
+    -o-transform: translateX(-1024px);
     -o-animation-timing-function: ease-in;
   }
 
   8% {
     opacity: 1;
-    -o-transform: scale(1.05);
+    -o-transform: scale(1.5);
     -o-animation-timing-function: ease-out;
   }
 
   17% {
-    opacity: 1;
-    -o-transform: scale(1.1);
-  }
-
-  25% {
     opacity: 0;
-    -o-transform: scale(1.1);
+    -o-transform: scale(1.2);
   }
 
   100% {
@@ -262,21 +266,17 @@
 @-ms-keyframes imageAnimation {
   0% {
     opacity: 0;
+    -ms-transform: translateX(-1024px);
   }
 
   8% {
     opacity: 1;
-    -ms-transform: scale(1.05);
+    -ms-transform: scale(1.5);
   }
 
   17% {
-    opacity: 1;
-    -ms-transform: scale(1.1);
-  }
-
-  25% {
     opacity: 0;
-    -ms-transform: scale(1.1);
+    -ms-transform: scale(1.2);
   }
 
   100% {
@@ -287,19 +287,23 @@
 @keyframes imageAnimation {
   0% {
     opacity: 0;
-    transform: translate(-1024px, 0);
-    animation-timing-function: ease-out;
+    transform: translateX(-1024px);
+    animation-timing-function: ease-in;
   }
 
-  17% {
+  8% {
     opacity: 1;
     transform: scale(1.5);
     animation-timing-function: ease-out;
   }
 
+  17% {
+    opacity: 0;
+    transform: scale(1.2);
+  }
+
   100% {
     opacity: 0;
-    animation-timing-function: ease-out;
   }
 }
 
@@ -454,9 +458,8 @@
   }
 }
 
-/* Show at least something when animations not supported */
 .no-cssanimations .aventine-slideshow li span {
-  opacity: 1;
+  display: none;
 }
 
 @media screen and (max-width: 1140px) {
